objects/Lead.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Titel__c</fullName>
        <label>Titel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Titel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketoID__c</fullName>
        <externalId>true</externalId>
        <label>Marketo ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_km__c</fullName>
        <label>Radius km</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Radius_km</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temporary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Institution</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubjectArea__c</fullName>
        <label>Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_to__c</fullName>
        <label>Available to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaregiverJob__c</fullName>
        <label>Caregiver Job</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Qualifikationsstufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Description__c</fullName>
        <label>[T] Description</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_from__c</fullName>
        <label>Available from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_Process_Time__c</fullName>
        <defaultValue>Now()+ 0.000011</defaultValue>
        <description>Indicator time when proccess builder should fire.</description>
        <label>[T] Process Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employment_type__c</fullName>
        <label>Employment type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketo_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketo Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountRecordType__c</fullName>
        <label>Account Record Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Convert_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead will be converted automatically, when this checkbox is set.</description>
        <label>[T] Convert Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_LeadDebtorNumber__c</fullName>
        <label>[T]LeadDebtorNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FacilityPracticeName__c</fullName>
        <label>Facility / Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendedByLastname__c</fullName>
        <label>Recommended By Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendedByFirstname__c</fullName>
        <label>Recommended By Firstname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_LeadCostCentreNumber__c</fullName>
        <label>[T] Lead Cost Centre Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Possible_weekly_services__c</fullName>
        <label>Possible weekly services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 Dienste</fullName>
                </value>
                <value>
                    <fullName>3-4 Dienste</fullName>
                </value>
                <value>
                    <fullName>5 oder mehr Dienste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaregiverFurtherEducation__c</fullName>
        <label>Caregiver Further Education</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_area_ZIP_code__c</fullName>
        <label>Operational area (ZIP code)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedPostalCodeRegion__c</fullName>
        <label>Requested Postal Code Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PLZ_Gebiet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TermsAndConditionsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms and Conditions accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConfirmationOfPrivacyStatement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Of Privacy Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterestedInPermanentEmployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in permanent employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permanent_employment_in_hospitals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permanent employment in hospitals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TemporaryRepresentationAssignments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary representation assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Availability_Information__c</fullName>
        <label>Additional Availability Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>MarketoIDwasDeleted</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(MarketoID__c)&amp;&amp; 
ISBLANK(MarketoID__c)</errorConditionFormula>
        <errorMessage>It is not allowed to delete the MarketoID.</errorMessage>
    </validationRules>
</CustomObject>